# data-lab

./: README.md
backend/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  sqlite.db
backend/app/: database.py  main.py
backend/app/projects/: models.py  router.py  schemas.py
backend/tests/projects/: test_projects.py  utils.py
frontend/: .prettierignore  .prettierrc  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.jsx  api.js
frontend/src/components/: DataModal.jsx  Modal.jsx  ProjectCard.jsx  SimpleDialog.jsx
