[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Agathe Raymond-Carlo <agathe.raymondcarlo@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
databases = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
